feat: add update-address endpoint
