# openapi.json
@@ -54,7 +54,7 @@
         },
         "summary": "Sign in with email",
         "tags": [
-          "Accounts / SignIn"
+          "Accounts ⌁ SignIn"
         ]
       }
     },
@@ -153,7 +153,7 @@
         },
         "summary": "Sign in with Google",
         "tags": [
-          "Accounts / SignIn"
+          "Accounts ⌁ SignIn"
         ]
       }
     },
@@ -181,7 +181,7 @@
         },
         "summary": "Sign out",
         "tags": [
-          "Accounts / SignIn"
+          "Accounts ⌁ SignIn"
         ]
       }
     },
@@ -257,7 +257,7 @@
         },
         "summary": "Create account with email",
         "tags": [
-          "Accounts / SignUp"
+          "Accounts ⌁ SignUp"
         ]
       }
     },
@@ -338,7 +338,7 @@
         },
         "summary": "Create account with Google",
         "tags": [
-          "Accounts / SignUp"
+          "Accounts ⌁ SignUp"
         ]
       }
     },
@@ -414,7 +414,7 @@
         },
         "summary": "Validate email verification code",
         "tags": [
-          "Accounts / SignUp"
+          "Accounts ⌁ SignUp"
         ]
       }
     },
@@ -471,7 +471,7 @@
         },
         "summary": "Complete onboarding",
         "tags": [
-          "Accounts / SignUp"
+          "Accounts ⌁ SignUp"
         ]
       }
     },
@@ -495,7 +495,7 @@
           }
         },
         "tags": [
-          "Workspace / Users"
+          "Workspace ⌁ Users"
         ]
       },
       "post": {
@@ -527,7 +527,7 @@
           }
         },
         "tags": [
-          "Workspace / Users"
+          "Workspace ⌁ Users"
         ]
       }
     },
@@ -559,7 +559,7 @@
           }
         },
         "tags": [
-          "Workspace / Users"
+          "Workspace ⌁ Users"
         ]
       }
     },
@@ -593,7 +593,7 @@
           }
         },
         "tags": [
-          "Workspace / Users"
+          "Workspace ⌁ Users"
         ]
       }
     },
@@ -625,7 +625,7 @@
           }
         },
         "tags": [
-          "Workspace / Users"
+          "Workspace ⌁ Users"
         ]
       }
     },
@@ -702,7 +702,7 @@
         },
         "summary": "List brands",
         "tags": [
-          "Workspace / Brands"
+          "Workspace ⌁ Brands"
         ]
       },
       "post": {
@@ -767,7 +767,7 @@
         },
         "summary": "Create brand",
         "tags": [
-          "Workspace / Brands"
+          "Workspace ⌁ Brands"
         ]
       }
     },
@@ -830,7 +830,7 @@
         },
         "summary": "Update brand",
         "tags": [
-          "Workspace / Brands"
+          "Workspace ⌁ Brands"
         ]
       }
     },
@@ -893,7 +893,7 @@
         },
         "summary": "Create address",
         "tags": [
-          "Workspace / Brands"
+          "Workspace ⌁ Brands"
         ]
       },
       "delete": {
@@ -934,7 +934,58 @@
         },
         "summary": "Delete address",
         "tags": [
-          "Workspace / Brands"
+          "Workspace ⌁ Brands"
+        ]
+      }
+    },
+    "/api/v1/workspace/brands/{brandId}/address/{addressId}": {
+      "put": {
+        "description": "Add a new addresss to a brand.",
+        "operationId": "updateBrandAddress",
+        "parameters": [
+          {
+            "name": "X-Workspace-Id",
+            "in": "header",
+            "description": "Id from selected workspace",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "addressId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateBrandAddressDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Address updated successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UpdateBrandAddressResponseDto"
+                }
+              }
+            }
+          }
+        },
+        "summary": "Update address",
+        "tags": [
+          "Workspace ⌁ Brands"
         ]
       }
     },
@@ -1864,7 +1915,7 @@
           "pagination"
         ]
       },
-      "UpsertBrandAddressResponsibleDto": {
+      "CreateBrandAddressResponsibleDto": {
         "type": "object",
         "properties": {
           "name": {
@@ -1935,7 +1986,7 @@
           "responsibles": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/UpsertBrandAddressResponsibleDto"
+              "$ref": "#/components/schemas/CreateBrandAddressResponsibleDto"
             }
           }
         },
@@ -2265,6 +2316,140 @@
         ]
       },
       "CreateBrandAddressResponseDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "state": {
+            "type": "object"
+          },
+          "city": {
+            "type": "string",
+            "nullable": true
+          },
+          "neighborhood": {
+            "type": "string",
+            "nullable": true
+          },
+          "street": {
+            "type": "string",
+            "nullable": true
+          },
+          "number": {
+            "type": "string",
+            "nullable": true
+          },
+          "complement": {
+            "type": "string",
+            "nullable": true
+          },
+          "brandId": {
+            "type": "string"
+          },
+          "brand": {
+            "type": "object"
+          },
+          "responsibles": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/BrandResponsibleEntityDto"
+            }
+          }
+        },
+        "required": [
+          "id",
+          "state",
+          "city",
+          "neighborhood",
+          "street",
+          "number",
+          "complement",
+          "brandId",
+          "brand",
+          "responsibles"
+        ]
+      },
+      "UpdateBrandAddressResponsibleDto": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "role": {
+            "type": "object",
+            "nullable": true
+          }
+        }
+      },
+      "UpdateBrandAddressDto": {
+        "type": "object",
+        "properties": {
+          "state": {
+            "type": "string",
+            "enum": [
+              "AC",
+              "AL",
+              "AP",
+              "AM",
+              "BA",
+              "CE",
+              "DF",
+              "ES",
+              "GO",
+              "MA",
+              "MT",
+              "MS",
+              "MG",
+              "PA",
+              "PB",
+              "PR",
+              "PE",
+              "PI",
+              "RJ",
+              "RN",
+              "RS",
+              "RO",
+              "RR",
+              "SC",
+              "SP",
+              "SE",
+              "TO"
+            ],
+            "nullable": true
+          },
+          "city": {
+            "type": "object",
+            "nullable": true
+          },
+          "neighborhood": {
+            "type": "object",
+            "nullable": true
+          },
+          "street": {
+            "type": "object",
+            "nullable": true
+          },
+          "number": {
+            "type": "object",
+            "nullable": true
+          },
+          "complement": {
+            "type": "object",
+            "nullable": true
+          },
+          "responsibles": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/UpdateBrandAddressResponsibleDto"
+            }
+          }
+        },
+        "required": [
+          "responsibles"
+        ]
+      },
+      "UpdateBrandAddressResponseDto": {
         "type": "object",
         "properties": {
           "id": {
